docs: lift A-1 in-session outcome to executive summary
Executive summary now leads with the empirical result: 16 of 22
queries at >= 1.x via per-job GC routing (ZGC default + G1
opt-in). Up from 10 with ZGC-only. Original plan wording
preserved below for context.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>